# snoopy-calendar

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  fpm.toml  meson.build  snpcal.f  snpcal.ps1  snpcal.sh  snpcal2018.txt  snppic.f  snppic.f90  utils.f90
.github/workflows/: ci_cmake.yml  ci_meson.yml
app/: snpcal.f  snpcal.for
archive/: .appveyor.yml  .travis.yml
ref/: snpcal.for  snppic.for
test/: diff.cmake  generate_calendar.cmake
tests/: diff.cmake  test_compilers.sh
